--- a/RHoK-cipher/assets/css/encoder.css
+++ b/RHoK-cipher/assets/css/encoder.css
@@ -20,3 +20,15 @@ div#encoder-inner{
 
 }
 
+
+input.cryptbox {
+	width:550px;
+	font-size: 24px;
+	font-family: "Courier New", Courier, monospace;
+}
+
+
+h2#successMsg {
+	display: none;
+}
+
